<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.createfootballstar.MainActivity"
    android:background="@color/colorBackground">






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleOnUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <EditText
                    style="@style/TextOfName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleOnUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/club"/>

                <EditText
                    style="@style/TextOfName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"/>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/picture2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <TextView
                    style="@style/TitleOnUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/surname"
                    android:gravity="right"/>

                <EditText
                    style="@style/TextOfName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|right"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleOnUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/national"
                    android:gravity="right"/>

                <EditText
                    style="@style/TextOfName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|right"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/TitleOnDown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/strike"
                android:layout_weight="3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight   ="1"
                    android:text="@string/minus"
                    android:onClick="Button1"/>
                <TextView
                    style="@style/TextOfAtributes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/View1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:onClick="Button2"
                    android:id="@+id/button3" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TitleOnDown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pass"
                android:layout_weight="3"
                android:id="@+id/textView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight   ="1"
                    android:text="@string/minus"
                    android:id="@+id/button"
                    android:onClick="Button3"/>

                <TextView
                    style="@style/TextOfAtributes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/View2"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:onClick="Button4"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TitleOnDown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/head"
                android:layout_weight="3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/minus"
                    android:onClick="Button5"/>
                <TextView
                    style="@style/TextOfAtributes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/View3"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:onClick="Button6"/>


            </LinearLayout>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/TitleOnDown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/defense"
                android:layout_weight="3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight   ="1"
                    android:text="@string/minus"
                    android:onClick="Button7"
                    android:id="@+id/button2" />

                <TextView
                    style="@style/TextOfAtributes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/View4"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:onClick="Button8"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TitleOnDown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/atack"
                android:layout_weight="3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight   ="1"
                    android:text="@string/minus"
                    android:onClick="Button9"/>
                <TextView
                    style="@style/TextOfAtributes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/View5"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:onClick="Button10"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TitleOnDown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pressing"
                android:layout_weight="3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/minus"
                    android:onClick="Button11"/>
                <TextView
                    style="@style/TextOfAtributes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/View6"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:onClick="Button12"/>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
